Added domains for error handling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         window._gaq = window._gaq || [];
         window._gaq.push(["_setAccount", "UA-35850648-4"]);
         window._gaq.push(["b._setAccount", "UA-860026-1"]);
-        if(window.location.hostname === "phlavi.herokuapp.com") {
+        if(window.location.hostname === "cityofphiladelphia.github.com"
+            || window.location.hostname = "avicalculator.phila.gov"
+            || window.location.hostname === "phlavi.herokuapp.com") {
             // Google Analytics
             (function() {
                 var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
