--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <style>body{padding-top:60px;}</style>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="css/theme.css">
-    <link rel="stylesheet" href="css/widget.css">
+    <link rel="stylesheet" href="css/lib/widget.css">
+    <link rel="stylesheet" href="css/lib/jquery-ui-slider.css">
     <link rel="stylesheet" href="css/styles.css">
     <script type='text/javascript'>
         window._gaq = window._gaq || [];
@@ -94,7 +95,7 @@
     <script type="text/template" id="tmpl-property">
         <h1><%= data.property.address %><%= $.trim(data.property.unit) ? " UNIT: " + data.property.unit : "" %><small> ACCOUNT #<%= data.property.actnum %></small></h1>
         <div class="row">
-            <div class="span6">
+            <div class="span4">
                 <div class="widget">
                     <div class="widget-header">
                         <h3>Previous Value</h3>
@@ -115,7 +116,7 @@
                     </div>
                 </div>
             </div>
-            <div class="span6">
+            <div class="span4">
                 <div class="widget">
                     <div class="widget-header">
                         <h3>New Value</h3>
@@ -138,38 +139,47 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <% if(data.property.value2014market >= 0) { %>
-        <div class="widget widget-table action-table">
-            <div class="widget-header">
-                <h3>Estimate 2014 Tax Assessment</h3>
+            <% if(data.property.value2014market >= 0) { %>
+            <div class="span4">
+                <div class="widget">
+                    <div class="widget-header">
+                        <h3>Estimate 2014 Tax Assessment</h3>
+                    </div>
+                    <div class="widget-content">
+                        <p>In order to generate the same amount of revenue next year as is estimated for this year,
+                        a minimum tax rate of 1.25% is needed without any relief measures. With a $30,000 homestead exemption program,
+                        a minimum of 1.34% is needed.</p>
+                        
+                        <ul class="nav nav-list">
+                            <li class="nav-header">Homestead Exemption</li>
+                            <li>
+                                <select name="homestead" id="homestead">
+                                    <option value="0">Select...</option>
+                                    <option value="0">No Homestead</option>
+                                    <option value="10000">$10,000</option>
+                                    <option value="15000">$15,000</option>
+                                    <option value="20000">$20,000</option>
+                                    <option value="25000">$25,000</option>
+                                    <option value="30000">$30,000</option>
+                                </select>
+                            </li>
+                            <li class="nav-header">Taxable Market Value</li>
+                            <li><span id="taxable-value"></span></li>
+                            <li class="nav-header">Tax Rate</li>
+                            <li><div id="rate"></div><div id="slider"></div></li>
+                            <li class="nav-header">Estimated 2014 Tax Assessment</li>
+                            <li>
+                                <div class="above"><button class="btn btn-large">Estimate</button></div>
+                                <div class="beneath"><span id="tax"></span></div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="widget-content">
-                <table class="table table-striped table-bordered responsive">
-                    <thead>
-                        <tr>
-                            <th>Homestead Exemption</th>
-                            <th class="hidden-phone-vertical">Taxable Value</th>
-                            <th>Rate Estimate</th>
-                            <th>Tax Estimate</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    <% _.each(data.calculations, function(val, key) { %>
-                        <tr>
-                            <td><%= key === "0" ? "None" : "$" + util.formatNumber(key) %></td>
-                            <td class="hidden-phone-vertical">$<%= util.formatNumber(val.taxable) %></td>
-                            <td><%= val.rate.min %> - <%= val.rate.max %>%</td>
-                            <td>$<%= util.formatNumber(val.tax.min, 2) %> - <%= util.formatNumber(val.tax.max, 2) %></td>
-                        </tr>
-                    <% }) %>
-                    </tbody>
-                </table>
-            </div>
+            <% } %>
         </div>
-        <% } %>
         <p>These tax rates are to be used for estimating purposes only and are not the proposed or final tax rates.</p>
-        <p>To learn more about AVI, please go to <a href="http://phila.gov/opa" target="_blank">www.phila.gov/opa</a></p>
+        <p>To learn more about AVI, please go to <a href="http://www.phila.gov/opa" target="_blank">www.phila.gov/opa</a></p>
         <p>If you think your new value does not reflect what it could sell for in the market, you may file an informal review with the OPA and/or appeal to the BRT.</p>
         
         <a href="#" class="btn btn-large"><i class="icon-chevron-left"></i> New Search</a>
@@ -189,6 +199,7 @@
     <script type="text/template" id="tmpl-error">
         <h1>Error</h1>
         <%= data.message %>
+        <br>You can also try searching at <a href="http://opa.phila.gov/opa.apps/Search/SearchForm.aspx?url=search" target="_blank">phila.gov/opa</a>
         <br><br>
         <a href="#" class="btn btn-large"><i class="icon-chevron-left"></i> Home</a>
         <a href="#" rel="reload" class="btn btn-large btn-info"><i class="icon-repeat icon-white"></i> Try Again</a>
@@ -199,6 +210,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/bootstrap.min.js"></script>
     <script src="js/lib/jquery-jsonp.min.js"></script>
+    <script src="js/lib/jquery-ui-slider.min.js"></script>
+    <script src="js/lib/jquery-ui-touch-punch.min.js"></script>
     <script src="js/util.js"></script>
     <script src="js/app.js"></script>
 </body>
