Prevent estimate without tax rate, limit multiple search

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <li><div id="rate"></div><div id="slider"></div></li>
                             <li class="nav-header">Estimated 2014 Tax Assessment</li>
                             <li>
-                                <div class="above"><button class="btn btn-large">Estimate</button></div>
+                                <div class="above"><button class="btn btn-large disabled">Estimate</button></div>
                                 <div class="beneath"><span id="tax"></span></div>
                             </li>
                         </ul>
