Changed width of homestead input

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <ul class="nav nav-list">
                             <li class="nav-header">Homestead Exemption</li>
                             <li>
-                                <select name="homestead" id="homestead">
+                                <select name="homestead" id="homestead" class="input-medium">
                                     <option value="0">Select...</option>
                                     <option value="0">No Homestead</option>
                                     <option value="10000">$10,000</option>
