Add promise polyfill

--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
     <script src="js/lib/jquery.cookie.min.js"></script>
     <script src="js/lib/jquery-jsonp.min.js"></script>
     <script src="js/lib/spinner.js"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Promise"></script>
 
     <!-- Application -->
     <script src="js/util.js"></script>
